--- a/src/_assets/scss/inc/header.scss
+++ b/src/_assets/scss/inc/header.scss
@@ -15,6 +15,7 @@
     opacity: 0;
     pointer-events: 0;
     transition: none;
+    position: absolute;
   }
   z-index: 4;
   pointer-events: none;
